added missing files

--- a/conatct.html
+++ b/conatct.html
@@ -1,3 +1,5 @@
 <h1> My conatct</h1>
-<p> Contact: melat.tesfay@amethodschools.org</p>
+<div>
+<p class="color"> Contact: melat.tesfay@amethodschools.org</p>
             <p> phone: (510)569-7915 </p>
+            </div>
