--- a/conatct.html
+++ b/conatct.html
@@ -1,5 +1,16 @@
-<h1> My conatct</h1>
+<html>
+    <body>
+<nav>
+            <ul class="nav">
+                <li class="nav-item"><a href="myprojects.html">My project</a></li>
+                <li class="nav-item"><a href="aboutme.html">About Me</a></li>
+                <li class="nav-item"><a href="conatct.html">My contact</a></li>
+            </ul>
+        </nav>
+<h3 id="read"> My conatct</h3>
 <div>
 <p class="color"> Contact: melat.tesfay@amethodschools.org</p>
-            <p> phone: (510)569-7915 </p>
+            <p> phone: (510)309-0391 </p>
             </div>
+            </html>
+            </body>
