--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         
         
         <div class="mid">
-            <h1>Melat</h1>
+            <p class="name">Melat</p>
             <img class="headshot" src="https://www.bloomnation.com/media/vendor/5096/65771b184bbac025bf31361dbbd10bae.jpg">
-            <h1>Tesfay</h1>
+            <p class="name">Tesfay</p>
         </div>
          <div class="footer">
             <p>Copyright © Oppong LLC 2018</p>
